# gestor-nfse

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  dev.bat  dev.ps1  fluxo_de_trabalho_obrigatoiro.md  install.bat  setup.bat  setup.ps1  start.bat  start.ps1
backend/: .gitignore  config.toml  config.toml.example  drizzle.config.ts  iniciar.bat  install.bat  main.py  package-lock.json  package.json  pyproject.toml  render.yaml  restart.bat  run.bat  stop.bat  tsconfig.json  vitest.config.ts
backend/dll/Unimake.DFe/: Unimake.Security.Platform.tlb
backend/features/automacao/: __init__.py  application.py  domain.py  infra.py  routes.py
backend/features/config/: application.py  domain.py  infra.py  routes.py
backend/features/distribuicao/: application.py  domain.py  infra.py  routes.py
backend/features/documentos/: __init__.py  application.py  domain.py  infra.py  routes.py
backend/features/operacoes/: application.py  domain.py  infra.py  routes.py
backend/features/prestadores/: application.py  domain.py  infra.py  routes.py
backend/shared/: config.py  database.py  dll.py  http_log.py  task_manager.py  validators.py
backend/src/: app.ts  config.ts  index.ts  seed.ts  validators.ts
backend/src/__tests__/: auth.test.ts  config.test.ts  documentos.test.ts  errors.test.ts  prestadores.test.ts  setup.ts  subscription.test.ts  tenant.test.ts  usuarios.test.ts  validators.test.ts
backend/src/db/: db.ts  schema.ts
backend/src/db/migrations/: 0000_sour_skreet.sql  (+2 more)
backend/src/shared/: auth.middleware.ts  error-handler.ts  errors.ts
(+86 files in other folders)
